refactor: Fix some issues identified by VSC
Now that Language Support for Java can run in the project, it can find
issues. These changes address most of them:

  * Use try-with-resources to close a couple of Closeables
  * remove some unused members/variables
  * organize imports